v1.17: Actually learning! a fixed position will align something to the bottom of the page, we set width to 100% to make sure that it is the full width, i played around with height to make sure it aligned with my vision, bottom:0 will also align it to the bottom, and i used rgba colors to set transparency! now i get why we would use the different color parameters (standard word colors, rgba, hex code, etc)

--- a/camaroproject/src/index.css
+++ b/camaroproject/src/index.css
@@ -54,3 +54,10 @@ img {
   background-repeat: no-repeat;
 }
 
+.camaro-overlay {
+  position: fixed;
+  width: 100%;
+  height: 40vh;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
